# calibrator-containers

./: .gitattributes  .gitignore  Dockerfile  README.md  entrypoint.sh  lambda_function.py  main.py  next.config.mjs  package-lock.json  package.json  pixi.toml  pyproject.toml  pyrightconfig.json  requirements.txt
api/: index.py
calibrate/: lambda_function.py  main.py  models.py
examples/: calibrator.py
functions/calibrate/: Dockerfile  lambda_function.py  pixi.toml
pages/api/: calib.ts
