[project]
name = "calibrator-lambdas"
version = "0.0.1"
description = "Camera calibration service for computing intrinsic parameters from checkerboard pattern images"
authors = [{ name = "Alvaro Gaona", email = "alvgaona@gmail.com" }]
requires-python = ">=3.11.13,<3.14"
dependencies = [
  "fastapi>=0.104.0,<1.0",
  "uvicorn[standard]>=0.24.0,<1.0",
  "ruff>=0.11.13,<0.12",
  "opencv-python>=4.10.0,<4.11",
  "numpy>=2.1.0,<2.2",
  "boto3",
  "pydantic>=2.11.7,<3",
  "pydantic-settings>=2.0.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calibrate"]

[tool.uv]
dev-dependencies = ["cmake>=3.30.3,<3.31"]

[tool.uv.sources]

[tool.pyright]
venvPath = ".venv"
venv = ".venv"

[tool.ruff]
target-version = "py311"
line-length = 88
