[project]
name = "calibrator-lambdas"
version = "0.0.1"
description = "Camera calibration workspace with multiple services"
authors = [{ name = "Alvaro Gaona", email = "alvgaona@gmail.com" }]
requires-python = ">=3.11.13,<3.14"

[tool.uv.workspace]
members = ["packages/calibrate"]

[tool.uv]
dev-dependencies = ["cmake>=3.30.3,<3.31"]

[tool.uv.sources]

[tool.pyright]
venvPath = ".venv"
venv = ".venv"

[tool.ruff]
target-version = "py311"
line-length = 88
